Changelog
=========


3.5.1 (unreleased)
------------------

- Move uploadbox above tabbedview menu
  [Kevin Bieri]

- Change Regex in parse_param. Only match decimal characters, since parseFloat may return wrong results when confronted with an int.
  [tschanzt]


3.5.0 (2016-03-07)
------------------

- Drop support for Plone 4.1.x.
  [deiferni]

- Respect permissions defined on tabs during tab-lookup.
  Replaces adapter lookup with traversal to make sure that permissions
  defined on a tab are respected.
  [deiferni]

- Handle when the client gets a response from different source than a tabbed-view.
  By default show a message that the tab could not be loaded successfully. This can
  be customized by registering a different event handler.
  [deiferni]


3.4.3 (2016-02-15)
------------------

- Prevent reload loop when requesting non-existing tab. [jone]


3.4.2 (2015-09-01)
------------------

- Add fallback in tabbedview initalization, when passed index of
  oneBeforeClick event is incorrect.
  [phgross]

- Fix javascript error in IE10 when no default index is defined.
  [Kevin Bieri]


3.4.1 (2015-08-03)
------------------

- Remove whitespace around content title.
  [deiferni]


3.4.0 (2015-05-26)
------------------

- Move tabbedview specific styles from plonetheme.onegov to this package.
  [lknoepfel]

- Fixed initial tab marker (default-tab).
  [phgross]


3.3.13 (2014-08-28)
-------------------

- Add before-tab slot.
  [mathias.leimgruber]


3.3.12 (2014-08-07)
-------------------

- JS: Use base URL to build absolute URL for set_default_tab.
  [lgraf]


3.3.11 (2014-05-28)
-------------------

- Enable D'n'D upload on tabbedview for IE > 9.
  [mathias.leimgruber]


3.3.10 (2014-05-26)
-------------------

- Made TabbedView title customizable by a custom tabbedview template.
  [phgross]

- Replaced old spinner image.
  [Julian Infanger]

- Use bind() instead of on() to restore jQuery < 1.7 compatibility.
  [lgraf]


3.3.9 (2014-03-28)
------------------
